--- a/src/tpl/inc/footer.twig
+++ b/src/tpl/inc/footer.twig
@@ -1,2 +1,66 @@
 <footer class="footer">
-</footer>
+  <div class="footer-inner">
+    <div class="container">
+      <div class="footer-row">
+        <div class="footer-col footer-col--frst">
+          <a class="link-logo" href="#">
+            <img alt="" class="link-logo__img" src="images/content/logo.png"></a>
+          </div>
+          <div class="footer-col footer-col--scnd">
+              <div class="footer-nav">
+                  <div class="footer-nav-r footer-nav-r1"><a href="#" class="footer-nav__link">Модельный ряд</a></div>
+                  <div class="footer-nav-r footer-nav-r2"><a href="#" class="footer-nav__link">Услуги</a></div>
+                  <div class="footer-nav-r footer-nav-r3"><a href="#" class="footer-nav__link">Компания</a></div>
+                  <div class="footer-nav-r footer-nav-r4"><a href="#" class="footer-nav__link">Новости</a></div>
+                  <div class="footer-nav-r footer-nav-r5"><a href="#" class="footer-nav__link">Контакты</a></div> 
+              </div>
+          </div>
+          <div class="footer-col footer-col--thrd">
+            <div class="footer-addrs">
+              <p>429430, Чувашская Республика</p>
+              <p class="ftr-sm-large">г. Козловка, <span class="ftr-sm-block">ул. Карла-Маркса, д. 1</span></p>
+              <p>
+                <a class="footer-addrs__link op7" href="mailto:komtehservice@mail.ru">komtehservice@mail.ru</a>
+              </p>
+            </div>
+          </div>
+          <div class="footer-col footer-col--frth">
+            <div class="phones">
+                <div class="phones-ico"></div>
+                <p><a href="tel:8 800 250-83-03" class="phones__link">8 800 250-83-03</a></p>
+                <p><a href="tel:+7 (83534) 2-12-51" class="phones__link">+7 (83534) 2-12-51</a></p>
+                <p><a href="#" class="phones__link-tx op7">Заказать звонок</a></p>
+            </div>
+          </div>
+          <div class="footer-col footer-col--last">
+            <ul class="list-social">
+              <li>
+                <a class="link-social link-social--fb" href="#">
+                    {% include "tpl/inc/svg/fb.svg" %}
+                </a>
+              </li>
+              <li>
+                <a class="link-social link-social--vk" href="#">
+                    {% include "tpl/inc/svg/vk.svg" %}
+                </a>
+              </li>
+              <li>
+                <a class="link-social link-social--in" href="#">
+                    {% include "tpl/inc/svg/instagram.svg" %}
+                </a>
+              </li>
+              <li>
+                <a class="link-social link-social--tw" href="#">
+                    {% include "tpl/inc/svg/twitter.svg" %}
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-row footer-row--sub">
+          <p class="footer-tx footer-tx--md-mr">© ООО «Комтехсервис», 2019</p>
+          <a class="footer-tx" href="#">Политика конфиденциальности</a>
+        </div>
+      </div>
+    </div>
+  </footer>
