--- a/src/tpl/inc/page.twig
+++ b/src/tpl/inc/page.twig
@@ -5,16 +5,19 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>{{ title }}</title>
+    <title>{{ title }}</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css?{{ date().getTime() }}">
 </head>
 <body>
 
-{% set title = "Twig.js templating test" %}
+{% set title = "KTC" %}
 
-{% block content %}{% endblock %}
+<div class="wrapper">
+    {% block content %}{% endblock %}
+</div>
 
-{% include 'footer.twig' %}
+{% include 'tpl/inc/footer.twig' %}
 
 <script src="js/index.js?{{ date().getTime() }}"></script>
 </body>
