--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,10 +1,11 @@
 @import "grid";
 @import "transition";
-@import "tabs";
-@import "alert";
+// @import "tabs";
+// @import "alert";
 @import "breadcrumb";
-@import "button";
-@import "button-group";
-@import "form";
-@import "font-type";
+// @import "button";
+// @import "button-group";
+// @import "form";
+// @import "font-type";
 @import "links";
+@import "catalog";
