--- a/src/tpl/main.twig
+++ b/src/tpl/main.twig
@@ -2,4 +2,11 @@
 
 {% block content %}
 
+<div class="content">
+
+    <div class="container">
+        {% include "tpl/inc/components/catalog.twig" %}
+    </div>
+</div>
+
 {% endblock %}
