--- a/src/tpl/main.twig
+++ b/src/tpl/main.twig
@@ -7,6 +7,8 @@
     <div class="container">
         {% include "tpl/inc/components/catalog.twig" %}
     </div>
+
+    {% include "tpl/inc/components/news-slider.twig" %}
 </div>
 
 {% endblock %}
