--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -1,6 +1,8 @@
 @import "footer";
 @import "socials";
 @import "phones";
+@import "ctx-card";
+@import "intro-about";
 
 .wrapper{
     overflow: hidden;
