--- a/src/tpl/inc/components/news-slider.twig
+++ b/src/tpl/inc/components/news-slider.twig
@@ -1,7 +1,7 @@
 <div class="swiper-container news-slider js-news-slider">
   <div class="swiper-wrapper">
     <a class="swiper-slide news-card" href="#">
-      <div class="news-card__img" style="background-image: url('images/temp/news.png"></div>
+      <div class="news-card__img" style="background-image: url('images/temp/news.png')"></div>
       <div class="news-card-body">
         <div class="news-card__title">
           Аварийно спасательный автомобиль АСА
@@ -41,7 +41,7 @@
       </div>
     </a>
     <a class="swiper-slide news-card" href="#">
-      <div class="news-card__img" style="background-image: url('images/temp/news.png"></div>
+      <div class="news-card__img" style="background-image: url('images/temp/news.png')"></div>
       <div class="news-card-body">
         <div class="news-card__title">
           Аварийно спасательный автомобиль АСА
