--- a/src/tpl/main.twig
+++ b/src/tpl/main.twig
@@ -4,7 +4,9 @@
 
 <div class="content">
 
-    <div class="container pb-5">
+    {% include "tpl/inc/blocks/intro-slider.twig" %}
+
+    <div class="container py-5">
         {% include "tpl/inc/components/catalog.twig" %}
     </div>
 
