--- a/src/styles/blocks/intro-about.scss
+++ b/src/styles/blocks/intro-about.scss
@@ -57,6 +57,9 @@
         font-size: 52px;
         font-weight: 700;
         line-height: 1;
+        .sm {
+            font-size: 32px;
+        }
     }
 }
 
