--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -6,7 +6,7 @@
 // @import "button";
 // @import "button-group";
 // @import "form";
-// @import "font-type";
+@import "font-type";
 @import "links";
 @import "catalog";
 @import "news-card";
