--- a/src/styles/components/font-type.scss
+++ b/src/styles/components/font-type.scss
@@ -6,16 +6,33 @@
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-
+    margin: 0;
+    font-weight: 500;
 }
 
 h1, .h1 { }
-h2, .h2 { }
+h2, .h2 {
+    margin-bottom: 15px;
+    font-size: 24px;
+}
 h3, .h3 { }
 h4, .h4 { }
 h5, .h5 { }
 h6, .h6 { }
 
+.title-bg {
+    position: relative;
+    margin: -12px -25px 20px -25px;
+    font-size: 60px;
+    line-height: 1;
+    opacity: .7;
+    color: $white;
+    font-weight: 800;
+    letter-spacing: 3px;
+    white-space: nowrap;
+    text-transform: uppercase;
+    text-align: center;
+}
 //
 // Horizontal rules
 //
@@ -40,10 +57,30 @@ mark,
 }
 
 
-//
-// Lists
-//
+@include media-breakpoint-up(sm) {
+    h2, .h2 {
+        margin-bottom: 25px;
+        font-size: 36px;
+    }
+    .title-bg {
+        margin: -30px -35px 20px -35px;
+        font-size: 142px;
+        letter-spacing: 8px;
+    }
+}
 
-.list-unstyled {
+@include media-breakpoint-up(md) {
+    .title-bg {
+        margin: -55px -25px 30px -25px;
+        font-size: 182px;
+        letter-spacing: 11px;
+    }
+}
 
+@include media-breakpoint-up(lg) {
+    .title-bg {
+        margin: -60px -25px 30px -25px;
+        font-size: 200px;
+        letter-spacing: 12px;
+    }
 }
