--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -9,7 +9,11 @@ $spacers: map-merge((
         2: ($spacer * 2),
         3: ($spacer * 3),
         4: ($spacer * 4),
-        5: ($spacer * 5)
+        5: ($spacer * 5),
+        6: ($spacer * 6),
+        7: ($spacer * 7),
+        8: ($spacer * 8),
+        9: ($spacer * 9),
 ), $spacers);
 
 //
