--- a/src/tpl/inc/blocks/intro-slider.twig
+++ b/src/tpl/inc/blocks/intro-slider.twig
@@ -40,6 +40,11 @@
         </div>
       </div>
   </div>
+  <div class="intro-slider-fraction">
+        <div class="intro-slider-fraction-row">
+            <span class="it-fraction__num js-fr-current"></span><span class="it-fraction__num sp-total js-fr-total"></span>
+        </div>
+  </div>
   <!-- Add Pagination -->
   <div class="swiper-pagination"></div>
   <!-- Add Arrows -->
