--- a/src/styles/libs/swiper.scss
+++ b/src/styles/libs/swiper.scss
@@ -272,8 +272,8 @@
   height: 8px;
   display: inline-block;
   border-radius: 100%;
-  background: #000;
-  opacity: 0.2;
+  background: #6d7278;
+  opacity: 0.7;
 }
 button.swiper-pagination-bullet {
   border: none;
@@ -290,7 +290,7 @@ button.swiper-pagination-bullet {
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #007aff;
+  background: $blue;
 }
 .swiper-container-vertical > .swiper-pagination-bullets {
   right: 10px;
@@ -318,7 +318,7 @@ button.swiper-pagination-bullet {
   transition: 200ms transform, 200ms top, 200ms -webkit-transform;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 4px;
+  margin: 0 10px;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   left: 50%;
