--- a/src/tpl/inc/blocks/intro-slider.twig
+++ b/src/tpl/inc/blocks/intro-slider.twig
@@ -45,9 +45,15 @@
             <span class="it-fraction__num js-fr-current"></span><span class="it-fraction__num sp-total js-fr-total"></span>
         </div>
   </div>
-  <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
-  <!-- Add Arrows -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
+  <div class="intro-slider-controls">
+    <!-- Add Pagination -->
+    <div class="swiper-pagination swiper-pagination--white"></div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next">
+        {% include "tpl/inc/svg/arrow-r.svg" %}
+    </div>
+    <div class="swiper-button-prev">
+       {% include "tpl/inc/svg/arrow-r.svg" %}
+    </div>
+  </div>
 </div>
