--- a/src/tpl/inc/blocks/intro-slider.twig
+++ b/src/tpl/inc/blocks/intro-slider.twig
@@ -1,7 +1,7 @@
 <div class="swiper-container intro-slider js-intro-slider">
     <div class="intro-slider__title">Комтехсервис</div>
   <div class="swiper-wrapper">
-    <div class="swiper-slide intro-slide" style="background-image: url('https://via.placeholder.com/1440x720.png/677b94?text=Slide1')">
+    <div class="swiper-slide intro-slide" style="background-image: url('images/temp/m-slide1.jpg')">
       <div class="intro-slide-inner">
         <div class="intro-slide__title">
           Проектирование и&nbsp;производство широкого ряда&nbsp;спецтехники
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div class="swiper-slide intro-slide" style="background-image: url('https://via.placeholder.com/1440x720.png/677b94')">
+    <div class="swiper-slide intro-slide" style="background-image: url('images/temp/m-slide2.jpg')">
         <div class="intro-slide-inner">
           <div class="intro-slide__title">
             Проектирование и&nbsp;производство широкого ряда&nbsp;спецтехники 2
