--- a/src/tpl/inc/page.twig
+++ b/src/tpl/inc/page.twig
@@ -16,7 +16,7 @@
               left: 0;
               right: 0;
               bottom: 0;
-              background-color: #282b30;
+              background-color: #016990;
             }
     </style>
     <noscript>
