--- a/src/tpl/inc/pages/main/intro-about.twig
+++ b/src/tpl/inc/pages/main/intro-about.twig
@@ -63,6 +63,19 @@
     </div>
   </div>
   <div class="intro-about-bottom">
-    <img alt="" class="intro-about__map" src="images/content/intro-about-map.png"></div>
+    <img alt="" class="intro-about__map" src="images/content/intro-about-map.png">
+    <span class="ia__map-logo"><img src="images/content/logo.png" alt=""></span>
+    <div class="intro-about__map-bg">
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+        <span class="ia__map-p"></span>
+    </div>
+  </div>
     {% include "tpl/inc/pages/main/list-text.twig" %}
   </div>
