--- a/src/styles/components/breadcrumb.scss
+++ b/src/styles/components/breadcrumb.scss
@@ -2,34 +2,40 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  margin-bottom: 20px;
 }
 
 .breadcrumb-item {
-  // The separator between breadcrumbs (by default, a forward-slash: "/")
+  color: $dark;
+  font-size: 10px;
+  text-decoration: none;
+
   + .breadcrumb-item {
     padding-left: 10px;
 
     &::before {
       display: inline-block; // Suppress underlining of the separator in modern browsers
-      content: '/';
+      content: '→';
+      margin-right: 10px;
     }
   }
+}
 
-  // IE9-11 hack to properly handle hyperlink underlines for breadcrumbs built
-  // without `<ul>`s. The `::before` pseudo-element generates an element
-  // *within* the .breadcrumb-item and thereby inherits the `text-decoration`.
-  //
-  // To trick IE into suppressing the underline, we give the pseudo-element an
-  // underline and then immediately remove it.
-  + .breadcrumb-item:hover::before {
+a.breadcrumb-item {
+  color: $gray-d1;
+  &:hover {
     text-decoration: underline;
   }
-  // stylelint-disable-next-line no-duplicate-selectors
-  + .breadcrumb-item:hover::before {
-    text-decoration: none;
+}
+
+@include media-breakpoint-up(sm) {
+  .breadcrumb {
+    margin-bottom: 30px;
   }
+}
 
-  &.active {
-
+@include media-breakpoint-up(lg) {
+  .breadcrumb {
+    padding-left: 110px;
   }
 }
