--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,120 +1,146 @@
 .header {
-    padding: 10px 0;
+  padding: 10px 0;
 
-    &--abs {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 20;
-    }
+  &-static {
+    margin-bottom: 30px;
+  }
 
-    &-row {
-        display: flex;
-        align-items: center;
-    }
-    &-col {
-        &--last {
-            margin-left: auto;
-        }
-    }
-    
-    .link-logo,
-    .phones {
-        position: relative;
-        z-index: 30;
-    }
-    .phones {
-        padding-left: 20px;
-        line-height: 1.4;
-        &-ico {
-            display: none;
-        }
-    }
-}
-
-.header-nav {
-    position: fixed;
-    z-index: 20;
+  &--abs {
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
-    background-color: $dark;
-    padding: 0 0 0 70px;
-    transform: translate3d(100%, 0, 0);
-    transition: transform .3s ease-in-out;
+    z-index: 20;
+  }
 
-    &.is-open {
-        transform: translate3d(0, 0, 0);
-    }
+  &--bg-gray {
+    .phones__link {
+      color: $dark;
 
-    .list-social {
-        position: absolute;
-        z-index: 10;
-        left: 60px;
-        bottom: 35px;
-        margin: 0;
+      .is-nav-open & {
+        color: $white;
+      }
+
+      &-tx {
+        color: $blue;
+        border-bottom: 1px dotted $blue;
+
+        .is-nav-open & {
+          color: $white;
+          border-bottom: 1px dotted $white;
+        }
+      }
     }
+  }
+
+  &-row {
+    display: flex;
+    align-items: center;
+  }
+  &-col {
+    &--last {
+      margin-left: auto;
+    }
+  }
+
+  .link-logo,
+  .phones {
+    position: relative;
+    z-index: 30;
+  }
+  .phones {
+    padding-left: 20px;
+    line-height: 1.4;
+    &-ico {
+      display: none;
+    }
+  }
+}
+
+.header-nav {
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $dark;
+  padding: 0 0 0 70px;
+  transform: translate3d(100%, 0, 0);
+  transition: transform 0.3s ease-in-out;
+
+  &.is-open {
+    transform: translate3d(0, 0, 0);
+  }
+
+  .list-social {
+    position: absolute;
+    z-index: 10;
+    left: 60px;
+    bottom: 35px;
+    margin: 0;
+  }
 }
 
 @include media-breakpoint-up(sm) {
-    .header {
-        padding: 30px 0 0 0;
+  .header {
+    padding: 30px 0 0 0;
 
-        &-row {
-            justify-content: space-between;
-        }
-
-        &-col {
-            &--scnd {
-                padding-left: 130px;
-            }
-            &--last {
-                margin-left: 0;
-            }
-        }
-
-        .phones {
-            padding-left: 55px;
-
-            &-ico {
-                display: block;
-            }
-        }
+    &-row {
+      justify-content: space-between;
     }
 
-    .header-nav {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 90px 0 0 190px;
-
-        .list-social {
-            position: relative;
-            left: -5px;
-            bottom: 0;
-        }
+    &-col {
+      &--scnd {
+        padding-left: 130px;
+      }
+      &--last {
+        margin-left: 0;
+      }
     }
+
+    .phones {
+      padding-left: 55px;
+      &__link {
+        line-height: 1;
+      }
+      &-ico {
+        display: block;
+      }
+    }
+  }
+
+  .header-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 90px 0 0 190px;
+
+    .list-social {
+      position: relative;
+      left: -5px;
+      bottom: 0;
+    }
+  }
 }
 
 @include media-breakpoint-up(md) {
-    .header {
-        &-col {
-            &--scnd {
-                padding-left: 0;
-            }
-        }
+  .header {
+    &-col {
+      &--scnd {
+        padding-left: 0;
+      }
     }
-    .header-nav {
-        display: block;
-        position: relative;
-        background-color: transparent;
-        padding: 0;
-        transform: translate3d(0, 0, 0);
+  }
+  .header-nav {
+    display: block;
+    position: relative;
+    background-color: transparent;
+    padding: 0;
+    transform: translate3d(0, 0, 0);
 
-        .list-social {
-            display: none;
-        }
+    .list-social {
+      display: none;
     }
+  }
 }
