--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,148 +1,170 @@
 .nav {
-    height: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  &-list {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+  }
 
-    &-list {
-        display: flex;
-        flex-direction: column;
+  &__link {
+    margin-bottom: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: $white;
+    text-transform: uppercase;
+    text-decoration: none;
+    &:hover {
+      color: $blue;
     }
-
-    &__link {
-        margin-bottom: 20px;
-        font-size: 12px;
-        font-weight: 700;
-        letter-spacing: 1.5px;
-        color: $white;
-        text-transform: uppercase;
-        text-decoration: none;
-        &:hover {
-            color: $blue;
-        }
-    }
+  }
 }
 
 .nav-btn {
-    position: relative;
-    z-index: 30;
-    width: 28px;
-    border: none;
-    padding: 0;
-    margin: 0;
-    background-color: transparent;
-    cursor: pointer;
-    &:focus {
-        outline: none;
-    }
+  position: relative;
+  z-index: 30;
+  width: 28px;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
 
-    &__line,
-    &__line:nth-child(2)::after {
-      height: 3px;
+  &__line,
+  &__line:nth-child(2)::after {
+    height: 3px;
+    background-color: $white;
+    transition: transform 0.3s, opacity 0.2s;
+
+    .header--bg-gray & {
+      background-color: $dark;
+    }
+  }
+  &__line:nth-child(3) {
+    width: 14px;
+  }
+
+  &__line:nth-child(2)::after {
+    content: '';
+    display: block;
+    width: 100%;
+  }
+
+  &__line + &__line {
+    margin-top: 6px;
+  }
+
+  &.is-active &__line:nth-child(1) {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  &.is-active &__line:nth-child(3) {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+
+  &.is-active &__line:nth-child(2) {
+    transform: rotate(45deg);
+
+    .header--bg-gray & {
       background-color: $white;
-      transition: transform 0.3s, opacity 0.2s;
     }
-    &__line:nth-child(3) {
-        width: 14px;
+  }
+
+  &.is-active &__line:nth-child(2)::after {
+    transform: rotate(-90deg);
+
+    .header--bg-gray & {
+      background-color: $white;
     }
-    
-    &__line:nth-child(2)::after {
-      content: "";
-      display: block;
-      width: 100%;
-    }
-    
-    &__line + &__line {
-      margin-top: 6px;
-    }
-    
-    &.is-active &__line:nth-child(1) {
-      opacity: 0;
-      transform: translateX(-100%);
-    }
-    
-    &.is-active &__line:nth-child(3) {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-    
-    &.is-active &__line:nth-child(2) {
-      transform: rotate(45deg);
-    }
-    
-    &.is-active &__line:nth-child(2)::after {
-      transform: rotate(-90deg);
-    }
+  }
 }
 
 @include media-breakpoint-up(sm) {
-    .nav {
-        height: auto;
-        margin-bottom: 80px;
-        &__link {
-            font-size: 22px;
-        }
+  .nav {
+    height: auto;
+    margin-bottom: 80px;
+    &__link {
+      font-size: 22px;
     }
-    .nav-btn {
-        width: 40px;
+  }
+  .nav-btn {
+    width: 40px;
 
-        &__line + &__line {
-            margin-top: 8px;
-        }
-        &__line:nth-child(3) {
-            width: 20px;
-        }
+    &__line + &__line {
+      margin-top: 8px;
     }
+    &__line:nth-child(3) {
+      width: 20px;
+    }
+  }
 }
 
 @include media-breakpoint-up(md) {
-    .nav {
-        flex-direction: row;
-        margin-bottom: 0;
+  .nav {
+    flex-direction: row;
+    margin-bottom: 0;
 
-        &-list {
-            flex-direction: row;
-        }
-
-        &__link {
-            position: relative;
-            margin: 0 0 0 25px;
-            font-weight: 600;
-            font-size: 12px;
-            color: rgba($white, .7);
-            transition: color .2s;
-
-            &:after {
-                content: '';
-                position: absolute;
-                z-index: 1;
-                left: 0;
-                bottom: -10px;
-                width: 0;
-                height: 2px;
-                background-color: $white;
-                transition: width .2s;
-            }
-
-            &:hover {
-                color: $white;
-                opacity: 1;
-                &:after {
-                    width: 100%;
-                }
-            }
-        }
+    &-list {
+      flex-direction: row;
     }
 
-    .nav-btn {
-        display: none;
+    &__link {
+      position: relative;
+      margin: 0 0 0 25px;
+      font-weight: 600;
+      font-size: 12px;
+      color: rgba($white, 0.7);
+      transition: color 0.2s;
+      .header--bg-gray & {
+        color: $dark;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        bottom: -10px;
+        width: 0;
+        height: 2px;
+        background-color: $white;
+        transition: width 0.2s;
+        .header--bg-gray & {
+          background-color: $blue;
+        }
+      }
+
+      &:hover {
+        color: $white;
+        opacity: 1;
+        .header--bg-gray & {
+          color: $blue;
+        }
+
+        &:after {
+          width: 100%;
+        }
+      }
     }
+  }
+
+  .nav-btn {
+    display: none;
+  }
 }
 
 @include media-breakpoint-up(lg) {
-    .nav {
-        &__link {
-            margin: 0 0 0 55px;
-        }
+  .nav {
+    &__link {
+      margin: 0 0 0 55px;
     }
+  }
 }
