--- a/src/tpl/inc/header.twig
+++ b/src/tpl/inc/header.twig
@@ -1,4 +1,4 @@
-<header class="header {% if headerAbs %} header--abs {% endif %}">
+<header class="header  {{ headerClass }}">
   <div class="header-inner">
     <div class="container">
       <div class="header-row">
