--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
         <title>KTC</title>
-        <link rel="stylesheet" href="css/style.css?{{ date().getTime() }}" />
+        <link href="css/style.css?{{ date().getTime() }}" rel="stylesheet" />
     </head>
     <body>
-        {% set pages = [ { link: 'main', name: 'Главная' } ] %}
+        {% set pages = [ 
+            { link: 'main', name: 'Главная' },
+            { link: 'service', name: 'Услуги' }
+        ] %}
 
         <div class="wrapper">
             <div class="container">
@@ -19,9 +19,9 @@
 
                 <ul>
                     {% for page in pages %}
-                    <li>
-                        <a href="{{ page.link }}.html" class="page-link">{{ page.name }}</a>
-                    </li>
+                        <li>
+                            <a href="{{ page.link }}.html" class="page-link">{{ page.name }}</a>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
