--- a/src/tpl/inc/components/breadcrumbs.twig
+++ b/src/tpl/inc/components/breadcrumbs.twig
@@ -1,4 +1,4 @@
 <div class="breadcrumb">
     <a class="breadcrumb-item" href="#">Главная</a>
-    <span class="breadcrumb-item" >Услуги</span>
+    <span class="breadcrumb-item" >{{ bredcreambItem }}</span>
 </div>
