--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -10,7 +10,8 @@
     <body>
         {% set pages = [ 
             { link: 'main', name: 'Главная' },
-            { link: 'service', name: 'Услуги' }
+            { link: 'service', name: 'Услуги' },
+            { link: 'models', name: 'Модельный ряд' },
         ] %}
 
         <div class="wrapper">
