--- a/src/tpl/service.twig
+++ b/src/tpl/service.twig
@@ -1,4 +1,5 @@
 {% set headerClass = 'header--bg-gray header-static' %}
+{% set bredcreambItem = 'Услуги' %}
 
 {% extends 'tpl/inc/page.twig' %}
 
@@ -9,7 +10,7 @@
             <div class="container">
                 {% include "tpl/inc/components/breadcrumbs.twig" %}
 
-                <h1 class="h1">Услуги</h>
+                <h1 class="h1">Услуги</h1>
             </div>
         </div>
 
