--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -6,11 +6,19 @@
 
 .btn {
   display: inline-block;
+  height: 45px;
+  padding: 0 25px;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
+  border-radius: 22px;
+  font-size: 11px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05), 0 10px 20px 0 rgba(40, 43, 48, 0.14);
 
   &:focus,
   &.focus {
@@ -31,7 +39,6 @@
   &:not(:disabled):not(.disabled):active,
   &:not(:disabled):not(.disabled).active {
     background-image: none;
-    background-color: #007bff;
 
     &:focus {
 
@@ -88,5 +95,16 @@ input[type="reset"],
 input[type="button"] {
   &.btn-block {
     width: 100%;
+  }
+}
+
+.btn-white {
+  background-color: $white;
+  color: $dark;
+}
+
+@include media-breakpoint-up(sm) {
+  .btn {
+    padding: 0 35px;
   }
 }
