--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -51,19 +51,48 @@
 }
 
 
-// Form grid
+// Form check
 //
-// Special replacement for our grid system's `.row` for tighter form layouts.
+.custom-control {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+  line-height: 1.3;
+  font-size: 12px;
 
-.form-row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -5px;
-  margin-left: -5px;
-
-  > .col,
-  > [class*="col-"] {
-    padding-right: 5px;
-    padding-left: 5px;
+  &-input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
   }
+  &-label {
+    position: relative;
+    margin-bottom: 0;
+    vertical-align: top;
+  }
+}
+.custom-control-label::before {
+  position: absolute;
+  top: 0;
+  left: -30px;
+  display: block;
+  width: 18px;
+  height: 18px;
+  pointer-events: none;
+  content: "";
+  background-color: $white;
+  border-radius: 4px;
+}
+.custom-control-label::after {
+  position: absolute;
+  top: 0;
+  left: -30px;
+  display: block;
+  width: 18px;
+  height: 18px;;
+  content: "";
+  background-position: -4px -8px; 
+}
+.custom-checkbox .custom-control-input:checked ~.custom-control-label::after {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='95' height='36' viewBox='0 0 95 36'%3E%3Cpath fill='none' fill-rule='evenodd' stroke='%230091FF' stroke-width='3' d='M8 17.667L12.4 21l6.6-8'/%3E%3C/svg%3E");
 }
