--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -3,9 +3,9 @@
 // @import "tabs";
 // @import "alert";
 @import "breadcrumb";
-// @import "button";
+@import "button";
 // @import "button-group";
-// @import "form";
+@import "form";
 @import "font-type";
 @import "links";
 @import "catalog";
